<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/adres_tv"
        android:text="@string/adres_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/adres_et"
        android:layout_marginLeft="5dp"/>
    <EditText
        android:id="@+id/adres_et"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/adres_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/adres_et"
        android:layout_marginRight="5dp"/>
    <Button
        android:id="@+id/info_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adres_et"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <TextView
        android:id="@+id/rozmiar_tv"
        android:text="@string/rozmiar_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/rozmiar_et"
        app:layout_constraintTop_toBottomOf="@id/info_bt"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/rozmiar_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/rozmiar_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_bt"
        android:textAlignment="center"
        android:text="@string/rozmiar_et"
        android:layout_marginRight="5dp"/>
    <TextView
        android:id="@+id/typ_tv"
        android:text="@string/typ_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/typ_et"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:id="@+id/typ_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/typ_tv"
        app:layout_constraintLeft_toLeftOf="@id/rozmiar_et"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rozmiar_et"
        android:textAlignment="center"
        android:text="@string/typ_et"
        android:layout_marginRight="5dp"/>
    <Button
        android:id="@+id/plik_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plik_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typ_et"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <TextView
        android:id="@+id/progres_tv"
        android:text="@string/progres_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/progres_et"
        app:layout_constraintTop_toBottomOf="@id/plik_bt"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/progres_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@id/progres_tv"
        app:layout_constraintLeft_toLeftOf="@id/typ_et"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plik_bt"
        android:textAlignment="center"
        android:text="0"
        android:layout_marginRight="5dp"/>
    <ProgressBar
        android:id="@+id/progres_pb"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:max="100"
        style="@android:style/Widget.ProgressBar.Horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progres_et"/>
    <TextView
        android:id="@+id/status_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progres_pb"
        android:textAlignment="center"
        android:text=""
        android:layout_marginRight="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>